K8s/Backend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  labels:
    app: demo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      imagePullSecrets:
      - name: github-registry-secret
      containers:
      - name: demo-backend
        image: ghcr.io/itsmanibharathi/demo_backend:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: backend-logs
          mountPath: /var/log/backend
      volumes:
      - name: backend-logs
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
spec:
  selector:
    app: demo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
